--- a/CM33/Objects/CM33.build_log.htm
+++ b/CM33/Objects/CM33.build_log.htm
@@ -22,17 +22,22 @@ Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
 D:\fpga\AC201-SA5Z50-CM33\TEST1\CM33\CM33.uvprojx
-Project File Date:  07/23/2024
+Project File Date:  07/25/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
-compiling lcd.c...
+USR/main.c(17): warning: In file included from...
+./LIBS\scd_inc.h(37): warning: padding size of 'struct TYJ_UNIT_STRUCT' with 2 bytes to alignment boundary [-Wpadded]
+   struct TYJ_UNIT_STRUCT
+          ^
+1 warning generated.
+compiling main.c...
 linking...
-Program Size: Code=5638 RO-data=3418 RW-data=24 ZI-data=4432  
+Program Size: Code=8148 RO-data=3428 RW-data=24 ZI-data=4472  
 After Build - User command #1: fromelf.exe D:\fpga\AC201-SA5Z50-CM33\TEST1\CM33\Objects\CM33.axf -c -d -e -s --output toFpga.lst
 After Build - User command #2: fromelf.exe D:\fpga\AC201-SA5Z50-CM33\TEST1\CM33\Objects\CM33.axf --bin -o toFpga.bin
-".\Objects\CM33.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\CM33.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -45,7 +50,7 @@ Package Vendor: ARM
   C:\Users\t\AppData\Local\Arm\Packs\ARM\CMSIS\5.9.0\Device\ARM\ARMCM33\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
